--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 %bibliography location
 \addbibresource{sources.bib}
 
-\title{Segal spaces of spans}
+\title{Complete Segal spaces of spans}
 \author{Angus Rush}
 
 \begin{document}
